// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateEventQuotas can use custom mutation to create multiple quotas 2`] = `
Object {
  "data": Object {
    "createEventQuotas": Object {
      "quotas": Array [
        Object {
          "eventId": "[id-2]",
          "id": "[id-1]",
          "size": 1,
          "title": Object {
            "en": "Test quota 1",
            "fi": "Testikiintiö 1",
          },
        },
        Object {
          "eventId": "[id-2]",
          "id": "[id-3]",
          "size": 2,
          "title": Object {
            "en": "Test quota 2",
            "fi": "Testikiintiö 2",
          },
        },
      ],
    },
  },
}
`;

exports[`CreateEventQuotas can't create quotas while logged out 1`] = `
Object {
  "data": Object {
    "createEventQuotas": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "LOGIN",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_event_quotas(uuid,app_public.create_event_quotas[]) line 9 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 9,
          "line": 2,
        },
      ],
      "message": "You must log in to create event quotas",
      "path": Array [
        "createEventQuotas",
      ],
    },
  ],
}
`;

exports[`CreateEventQuotas must specify at least one event quota 1`] = `
Object {
  "data": Object {
    "createEventQuotas": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_event_quotas(uuid,app_public.create_event_quotas[]) line 14 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 9,
          "line": 2,
        },
      ],
      "message": "You must specify at least one quota",
      "path": Array [
        "createEventQuotas",
      ],
    },
  ],
}
`;
